@@ -1,3 +1,8 @@
+Thu Dec 21 17:51:37 2000  George Lebl <jirka@5z.com>
+
+	* gen_util/clock.c:  Apply patch from Tobias Bengtsson <tobbe@tobbe.nu>
+	  for adding an Internet time mode
+
 2000-10-15 John Fleck <jfleck@inkstain.net>
 	* tasklist/help/C/tasklist.sgml, tasklist-applet.sgml - update
 	docs for Nautilus/1.4 compatibility (patch from Greg Leblanc)
